--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^0.18.0",
 		"bootstrap": "^4.1.3",
+		"classnames": "^2.2.6",
 		"jwt-decode": "^2.2.0",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
@@ -14,6 +15,7 @@
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0"
 	},
+	"proxy": "http://localhost:5000",
 	"scripts": {
 		"start": "react-scripts start",
 		"build": "react-scripts build",
@@ -23,11 +25,5 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"proxy": "http://localhost:5000",
-	"browserslist": [
-		">0.2%",
-		"not dead",
-		"not ie <= 11",
-		"not op_mini all"
-	]
+	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
