--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
 		"bootstrap": "^4.1.3",
 		"classnames": "^2.2.6",
 		"jwt-decode": "^2.2.0",
+		"lodash": "^4.17.11",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
 		"react-redux": "^6.0.0",
@@ -25,5 +26,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
