--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
 		"lodash": "^4.17.11",
 		"react": "^16.6.3",
 		"react-dom": "^16.6.3",
+		"react-moment": "^0.8.4",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
 		"react-scripts": "2.1.1",
