writing posts works

--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,13 @@
 		"classnames": "^2.2.6",
 		"jwt-decode": "^2.2.0",
 		"lodash": "^4.17.11",
+		"popper": "^1.0.1",
 		"react": "^16.6.3",
+		"react-autosize-textarea": "^6.0.0",
 		"react-dom": "^16.6.3",
+		"react-images-upload": "^1.2.3",
+		"react-loading": "^2.0.3",
+		"react-modal": "^3.7.1",
 		"react-moment": "^0.8.4",
 		"react-redux": "^6.0.0",
 		"react-router-dom": "^4.3.1",
