--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,10 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"body-parser": "^1.18.3",
+		"cloudinary": "^1.13.2",
 		"express": "^4.16.4",
+		"express-form-data": "^2.0.6",
+		"form-data": "^2.3.3",
 		"mongoose": "^5.3.15",
 		"nodemon": "^1.18.7",
 		"passport": "^0.4.0",
