--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,9 @@
 		"react": "^16.6.3",
 		"react-autosize-textarea": "^6.0.0",
 		"react-dom": "^16.6.3",
+		"react-gallery-swiper": "^0.5.5",
 		"react-geolocated": "^2.4.0",
+		"react-image-gallery": "^0.8.12",
 		"react-images-upload": "^1.2.3",
 		"react-loading": "^2.0.3",
 		"react-modal": "^3.7.1",
@@ -34,5 +36,10 @@
 	"eslintConfig": {
 		"extends": "react-app"
 	},
-	"browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+	"browserslist": [
+		">0.2%",
+		"not dead",
+		"not ie <= 11",
+		"not op_mini all"
+	]
 }
